--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -9,12 +9,9 @@ parameters:
     excludePaths:
         - %currentWorkingDirectory%/tests/*
     scanDirectories:
-      - build/vendor
+      - build/php/vendor
     ignoreErrors:
         - '#Function get_option invoked with 2 parameters, 0 required#'
     bootstrapFiles:
         - vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
         - vendor/php-stubs/woocommerce-stubs/woocommerce-stubs.php
-        #- vendor/php-stubs/acf-pro-stubs/acf-pro-stubs.php
-
-# Function get_option invoked with 2 parameters, 0 required.
