--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,10 @@
         "phpstan/phpstan": "^1.0",
         "szepeviktor/phpstan-wordpress": "^1.0",
         "php-stubs/wordpress-stubs": "^6.0 || ^5.9",
-        "roots/wordpress": "^6.0",
-        "wp-phpunit/wp-phpunit": "^6.0",
+        "roots/wordpress": "^6.1",
+        "wp-phpunit/wp-phpunit": "^6.1",
         "dealerdirect/phpcodesniffer-composer-installer": "*",
         "wp-coding-standards/wpcs": "*",
-        "object-calisthenics/phpcs-calisthenics-rules": "*",
         "yoast/phpunit-polyfills": "^0.2.0 || ^1.0.0",
         "symfony/var-dumper": "*",
         "gin0115/wpunit-helpers": "*",
@@ -39,7 +38,8 @@
         "bamarni/composer-bin-plugin": "^1.4",
         "php-stubs/woocommerce-stubs": "^6.7",
         "kimhf/advanced-custom-fields-pro-stubs": "^5.9",
-        "pxlrbt/php-scoper-prefix-remover": "*"
+        "pxlrbt/php-scoper-prefix-remover": "*",
+        "vlucas/phpdotenv": "^5.4"
     },
     "require": {
         "php": ">=7.4.0",
