--- a/composer.json
+++ b/composer.json
@@ -33,13 +33,15 @@
         "yoast/phpunit-polyfills": "^0.2.0 || ^1.0.0",
         "symfony/var-dumper": "*",
         "gin0115/wpunit-helpers": "*",
-        "jetbrains/phpstorm-stubs": "dev-master",
         "humbug/php-scoper": "*",
         "bamarni/composer-bin-plugin": "^1.4",
         "php-stubs/woocommerce-stubs": "^6.7",
         "kimhf/advanced-custom-fields-pro-stubs": "^5.9",
         "pxlrbt/php-scoper-prefix-remover": "*",
+        "gin0115/buddypress-stubs": "11.*",
+        "php-stubs/acf-pro-stubs": "^6.0",
         "vlucas/phpdotenv": "^5.4"
+
     },
     "require": {
         "php": ">=7.4.0",
