--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -18,3 +18,5 @@ parameters:
     bootstrapFiles:
         - vendor/php-stubs/wordpress-stubs/wordpress-stubs.php
         - vendor/php-stubs/woocommerce-stubs/woocommerce-stubs.php
+        - vendor/php-stubs/acf-pro-stubs/acf-pro-stubs.php
+        - vendor/gin0115/buddypress-stubs/buddypress-stubs.php
