--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -55,4 +55,7 @@ jobs:
           environment_github: true
         run: composer all
 
+      - name: Codecov
+        run: bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CORE_CODEV }}
+
       
